# goodreads-scraper

./: .env  .gitignore  README.md  example.ipynb  pyproject.toml
src/goodreads-scraper/: .env  scraper.ipynb
src/goodreads_scraper/: __init__.py  book.py  login.py  shelf.py  utils.py
