[tool.poetry]
name = "goodreads_scraper"
version = "0.1.0"
description = "Small python scripts to scrape start & read dates from your books."
authors = ["David Polido <dav.polido@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/davidpolido/goodreads-scraper"
repository = "https://github.com/davidpolido/goodreads-scraper"
keywords = ["goodreads", "scraper"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
jupyter = "^1.0.0"
pandas = "^1.2.4"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
